# database-migration-quality-lab

./: .env.example  .gitignore  Makefile  PORTFOLIO.md  README.md  docker-compose.yml  pyproject.toml
data/: README.md
docs/: PORTFOLIO_LAYER.md  README.md  VALIDATION.md  architecture.md  data_dictionary.md  data_quality_rules.md  local_run_report.md  mapping_specification.md  performance_notes.md  public_safety.md  reconciliation_report.md  rollback_plan.md  screenshots.md
docs/screenshots/: validation-output.html
sql/: 00_legacy_schema.sql  01_target_schema.sql  02_seed_legacy_data.sql  03_migration.sql  04_validation_checks.sql  05_reconciliation_report.sql  06_performance_notes.sql
src/migration_quality/: __init__.py  config.py  db.py  generate_synthetic_legacy_data.py  load_legacy.py  migrate.py  reconcile.py  report.py  validate.py
tests/: test_config.py  test_reconciliation_logic.py  test_sql_files_exist.py  test_synthetic_legacy_data.py  test_validation_logic.py
