[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "database-migration-quality-lab"
version = "0.1.0"
description = "Synthetic legacy-to-target data migration lab with SQL validation and reconciliation."
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
